Add script to apply core patches on start container

--- a/example/civicrm/compose.yaml
+++ b/example/civicrm/compose.yaml
@@ -9,6 +9,8 @@ services:
       - private:/var/www/html/private
       - public:/var/www/html/public
       - ext:/var/www/html/ext
+      - private/php.ini:/usr/local/etc/php/php.ini # If you need to customise php settings override php.ini
+      - patches:/var/www/html/patches # If you need to apply patches to CiviCRM core put them here, they will be applied each time container starts
     environment:
       CIVICRM_DB_HOST: db
       CIVICRM_DB_PORT: 3306
